<!--
  ~ Copyright 2015 Elia Zammuto
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a prepareCopy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">LibreEX</string>
    <string name="toolbar_menu_new_folder">New Folder</string>
    <string name="new_folder_title">New Folder</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="toolbar_menu_cut">Cut</string>
    <string name="toolbar_menu_copy">Copy</string>
    <string name="toolbar_menu_delete">Delete</string>
    <string name="toolbar_menu_paste">Paste</string>
    <string name="toolbar_menu_rename">Rename</string>
    <string name="toolbar_menu_details">Details</string>
    <string name="toolbar_menu_share">Share</string>
    <string name="paste_dialog_title">Pasting File - Don\'t Close the App!</string>
    <string name="paste_dialog_message">Please Wait…</string>
    <string name="title_activity_settings">LibreFM Settings</string>
    <string name="pref_layout_grid_title">Use Grid to show Files</string>
    <string name="pref_show_hidden_files_title">Show Hidden Files</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="menu_item_exit">Exit</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_parentfolder">Parent Folder</string>
    <string name="pref_general_category_title">General Preferences</string>
    <string name="pref_misc_category_title">Misc</string>
    <string name="pref_oss_notice">Open Source Licenses</string>
    <string name="pref_license">App License</string>
    <string name="delete_dialog_single">Are you sare that you want to delete this Item?</string>
    <string name="delete_dialog_multiple">Are you sure that you want to delete </string>
    <string name="delete_dialog_items">Items</string>
    <string name="pref_icon_size_list_title">Icon size in List View</string>
    <string name="pref_icon_size_grid_title">Icon size in Grid View</string>
    <string name="pref_icon_size_hint">Insert a number Ex: 8</string>
</resources>
