<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Elia Zammuto
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/pref_general_category_title"/>
  <SwitchPreference android:key="pref_show_hidden_files" android:title="@string/pref_show_hidden_files_title" android:defaultValue="false" />
  <SwitchPreference android:key="pref_layout_grid" android:title="@string/pref_layout_grid_title" android:defaultValue="false" />
  <PreferenceCategory android:title="@string/pref_misc_category_title"/>
  <Preference android:title="@string/pref_license" android:key="pref_license" />
  <Preference android:title="@string/pref_oss_notice" android:key="pref_oss_notice" />
</PreferenceScreen>