<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2015 Elia Zammuto
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a prepareCopy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Main View -->
    <LinearLayout
        android:id="@+id/list_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"></LinearLayout>
    <!-- Sidebar -->

    <RelativeLayout
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/backgroundColor"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical">
            <!-- Parent Folder Button -->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/menu_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="onHomeButtonClicked"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dip"
                    android:layout_height="48dip"
                    android:src="@drawable/ic_menu_home" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/menu_item_home" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/menu_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="onSettingsButtonClicked"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dip"
                    android:layout_height="48dip"
                    android:src="@drawable/ic_menu_settings" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/menu_item_settings" />

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/menu_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="onExitButtonClicked"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dip"
                    android:layout_height="48dip"
                    android:src="@drawable/ic_menu_exit" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/menu_item_exit" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>
